# TopicExplorer

./: .gitignore  README.md  core-webinterface.properties  merge.xsl  pom.xml  sql-analytics.md
command-manager/: pom.xml
command-manager/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
command-manager/local/main/resources/: config.local.properties  database.local.properties
command-manager/src/main/resources/: config.global.properties
command-manager/src/test/resources/: DummyCatalog.xml  DummyCatalog1.xml  DummyCatalog2.xml  DummyCatalog3.xml  DummyCatalog4.xml  DummyCatalog_for_ordering.xml
common-crawl/: pom.xml
common-crawl/src/main/resources/: log4j.properties
common-crawl/src/test/resources/: InvalidULRs.txt  JapaneseStrings.txt  SampleURLs.txt  TestRecord.warc  blogproviders.txt  config-inputpath.xml  config-pathfile.xml  rss_cenc.rss.xml  testFeed.json  testconf.xml  warc.path
core-common/: .project  pom.xml
core-common/src/main/resources/: cmdb.global.properties  config.global.properties  database.global.properties  log4j.global.properties
core-common/src/test/resources/: config.global.properties  config.local.properties  database.global.properties  database.local.properties  fulltext.local.properties
core-initcorpus/: pom.xml
core-initcorpus/src/main/resources/: postDBConfig.xml  preDBConfig.xml
core-preprocessing/: pom.xml
core-preprocessing/src/main/resources/: core-preprocessing.xml  postJooqConfig.xml  preJooqConfig.xml
core-webinterface/: HsqlTestDb.properties  pom.xml
core-webinterface/src/main/resources/: catalog.xml
creator-server/: .gitignore  Makefile  nginx-template.conf
creator-server/common/: LICENSE  topicexplorer-config.cabal
creator-server/common/src/TopicExplorer/Configuration/: Corpus.hs  Database.hs  Date.hs  Exception.hs  Log.hs  Parser.hs  Utility.hs
creator-server/creator/: LICENSE  topic-creator.cabal
creator-server/creator/script/: README-create-te.md  compute_te.sh  exists_te.sh  initialize_te.sh
creator-server/creator/src/: Main.hs  Query.hs
creator-server/creator/src-lib/TopicExplorer/Creator/: Communication.hs  Corpus.hs
creator-server/creator/src/Query/: Parser.hs
creator-server/creator/src/Server/: Create.hs
creator-server/frontend/: Makefile  elm-package.json
creator-server/frontend/src/: Common.elm  CreatorConfig.elm  DateRange.elm
distribution/: .project  pom.xml
distribution-aggregated/: pom.xml
distribution-core-preprocessing/: pom.xml
distribution-preprocessing/: pom.xml
distribution-webinterface/: pom.xml
import-folder/: pom.xml
plugin-POS-preprocessing/: pom.xml
plugin-category-preprocessing/: pom.xml
plugin-colortopic-preprocessing/: pom.xml
plugin-colortopic-webinterface/: pom.xml
plugin-duplicates-preprocessing/: pom.xml
plugin-frame-preprocessing/: pom.xml
plugin-frame-webinterface/: pom.xml
plugin-fulltext-preprocessing/: pom.xml
plugin-hierarchicaltopic-preprocessing/: pom.xml
plugin-hierarchicaltopic-webinterface/: pom.xml
plugin-link-preprocessing/: pom.xml
plugin-link-webinterface/: pom.xml
plugin-mecab-initcorpus/: pom.xml
plugin-mecab-preprocessing/: POS_TYPE.sql  pom.xml
plugin-openNLP-preprocessing/: pom.xml
plugin-pos-preprocessing/: pom.xml
plugin-prune-preprocessing/: pom.xml
plugin-text-preprocessing/: pom.xml
plugin-text-webinterface/: pom.xml
plugin-time-preprocessing/: pom.xml
plugin-time-webinterface/: pom.xml
plugin-wiki-preprocessing/: pom.xml
plugin-wordtype-preprocessing/: pom.xml
plugin-wordtype-webinterface/: pom.xml
run-initcorpus/: pom.xml
run-jobmanagement/: pom.xml
run-preprocessing/: catalog.xml  pom.xml
translate-mysql-to-hsqldb/: pom.xml
webapp/: pom.xml
webapp-preprocessing/: pom.xml
(+643 files in other folders)
