Name:             topicexplorer-config
Version:          0.0
License:          AGPL
License-File:     LICENSE
Author:           Henning Thielemann
Maintainer:       Henning Thielemann <haskell@henning-thielemann.de>
Homepage:         https://blogs.urz.uni-halle.de/topicexplorer/
Category:         Data Mining
Synopsis:         Common definitions for all parts of the TopicExplorer crawler
Description:      Common definitions for all parts of the TopicExplorer crawler
Tested-With:      GHC==7.6.3, GHC==7.10.3, GHC==8.2.1
Cabal-Version:    >=1.8
Build-Type:       Simple

Source-Repository this
  Tag:         0.0
  Type:        git
  Location:    git@gitlab.informatik.uni-halle.de:topicexplorer/te-configuration-ui.git

Source-Repository head
  Type:        git
  Location:    git@gitlab.informatik.uni-halle.de:topicexplorer/te-configuration-ui.git

Library
  Build-Depends:
    happstack-server >=7.4 && <7.5,
    HTTP >=4000.2 && <4001,
    network-uri >=2.6 && <2.7,
    process >=1.1 && <1.5,
    time >=1.5 && <1.9,
    aeson >=1.0 && <1.3,
    parsec >=2.1 && <3.2,
    explicit-exception >=0.1.7 && <0.2,
    transformers >=0.3 && <0.6,
    text >=1.2 && <1.3,
    bytestring >=0.9.2 && <0.11,
    deepseq >=1.3 && <1.5,
    utility-ht >=0.0.12 && <0.1,
    base >=4 && <5

  GHC-Options:      -Wall
  Hs-Source-Dirs:   src
  Exposed-Modules:
    TopicExplorer.Configuration.Database
    TopicExplorer.Configuration.Corpus
    TopicExplorer.Configuration.Date
    TopicExplorer.Configuration.Parser
    TopicExplorer.Configuration.Exception
    TopicExplorer.Configuration.Log
    TopicExplorer.Configuration.Utility
