Name:             topic-creator
Version:          0.0
License:          BSD3
License-File:     LICENSE
Author:           Henning Thielemann
Maintainer:       Henning Thielemann <haskell@henning-thielemann.de>
Homepage:         https://blogs.urz.uni-halle.de/topicexplorer/
Category:         Data Mining
Synopsis:         Simple web-server for managing TopicExplorer creation
Description:      Simple web-server for managing TopicExplorer creation
Tested-With:      GHC==7.4.2, GHC==7.6.3, GHC==8.2.1
Cabal-Version:    >=1.8
Build-Type:       Simple
Data-Files:
  script/compute_te.sh
  script/exists_te.sh
  script/initialize_te.sh

Source-Repository this
  Tag:         0.0
  Type:        git
  Location:    git@gitlab.informatik.uni-halle.de:topicexplorer/te-configuration-ui.git

Source-Repository head
  Type:        git
  Location:    git@gitlab.informatik.uni-halle.de:topicexplorer/te-configuration-ui.git

Library
  GHC-Options:      -Wall
  Hs-Source-Dirs:   src-lib

  Build-Depends:
    topicexplorer-config >=0.0 && <0.1,
    aeson >=1.0 && <1.3,
    text >=1.2 && <1.3,
    containers >=0.4.2 && <0.6,
    base >=4 && <5

  Exposed-Modules:
    TopicExplorer.Creator.Corpus
    TopicExplorer.Creator.Communication

Executable creator-server
  Build-Depends:
    topic-creator,
    topicexplorer-config,
    happstack-server >=7.4 && <7.5,
    network-uri >=2.6 && <2.7,
    total-map >=0.0.5 && <0.1,
    process >=1.1 && <1.5,
    time >=1.5 && <1.9,
    concurrent-split >=0.0.1 && <0.1,
    aeson,
    optparse-applicative >=0.11 && <0.13,
    parsec >=2.1 && <3.2,
    explicit-exception >=0.1.7 && <0.2,
    transformers >=0.3 && <0.6,
    containers,
    pathtype >=0.8 && <0.9,
    non-empty >=0.3 && <0.4,
    bytestring >=0.9.2 && <0.11,
    utility-ht >=0.0.12 && <0.1,
    base >=4 && <5

  GHC-Options:      -Wall -threaded -rtsopts
  Hs-Source-Dirs:   src
  Main-Is: Main.hs
  Other-Modules:
    Query.Parser
    Query
    Paths_topic_creator
